--- a/style/style.css
+++ b/style/style.css
@@ -420,7 +420,7 @@ top: 8px;
         display: block;
         top: -100%;
         position: absolute;
-        height: 100%;
+        height: 660px;
         overflow-y: auto;
     }
     .header__menu.active{
